--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>subjects</title>
-    <link rel="stylesheet" href="/assets/subjectdark.css">
+    <link id="theme-style" rel="stylesheet" href="/assets/subjectdark.css">
+    <script defer src="/assets/theme.js"></script>
+
 </head>
 <body>
 <header>
@@ -29,7 +31,7 @@
         <h1>Hallo Christian Hartmann</h1> <!-- hier backend Code einfügen mit Variablen und so, dass Name variabel wird -->
         <button>Create subject</button>
     </div>
-    <div class="subject"></div>
+    <div class="subject"></div> <!-- Backend Code um diese subjects in js zu erzeugen -->
     <div class="subject"></div>
     <div class="subject"></div>
     <div class="subject"></div>
