--- a/views/about.ejs
+++ b/views/about.ejs
@@ -18,7 +18,7 @@
 
         <div id="dark-mode-switch">
             <label class="switch">
-                <input type="checkbox">
+                <input id="toggle" type="checkbox">
                 <span class="slider round">
                     <div class="background"></div>
                     <div class="star"></div>
