--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -27,7 +27,7 @@
     </nav>
 </header>
 <main>
-    <div class="topbanner">
+    <div class="top-banner">
         <h1>Hallo Christian Hartmann</h1> <!-- hier backend Code einfügen mit Variablen und so, dass Name variabel wird -->
         <button>Create subject</button>
     </div>
