--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -8,9 +8,9 @@
 <body>
 <header>
     <nav>
-        <a href="google.com">Erste</a>
-        <a href="google.com">Google</a>
-        <a href="google.com">Google</a>
+        <a href="google.com">Notenübersicht</a>
+        <a href="google.com">Lernplan</a>
+        <a href="google.com">Abmelden</a>
         <a href="google.com">Google</a>
 
         <label class="theme-toggle">
@@ -24,7 +24,7 @@
 
     </nav>
 </header>
-<main>
+<main class="gridAddon">
     <div class="topbanner">
         <h1>Hallo Christian Hartmann</h1> <!-- hier backend Code einfügen mit Variablen und so, dass Name variabel wird -->
         <button>Create subject</button>
