topbanner zu top-banner aus der merge korrigiert

--- a/views/subject.ejs
+++ b/views/subject.ejs
@@ -25,7 +25,7 @@
     </nav>
 </header>
 <main>
-    <div class="topbanner">
+    <div class="top-banner">
         <h1>Name des angeklickten Fachs</h1> <!-- hier backend Code einfügen mit Variablen und so, dass Name variabel wird -->
         <button>Create subject</button>
     </div>
