--- a/views/subject.ejs
+++ b/views/subject.ejs
@@ -31,15 +31,15 @@
     </div>
     <div style="width:100%; min-height:90vh; display:flex;">
         <!--Linker Teil für die Notizen und co-->
-        <div style="flex:2; background-color:blue; padding:10px; box-sizing:border-box;">
+        <div style="flex:2; padding:10px; box-sizing:border-box;">
             <div class="subject" style="width:100%; height:100%; flex-direction:column; align-items:flex-start; justify-content:flex-start; padding: 10px; box-sizing:border-box;">
                 <h2>Notizen</h2>
-                <textarea placeholder="Notizen..." style="width: 100%; height:100%; box-sizing:border-box; background-color:lightblue; border-radius: 15px;"></textarea>
+                <textarea placeholder="Notizen..." style="width: 100%; height:100%; box-sizing:border-box; background-color:lightblue; border-radius: 15px; padding: 20px;"></textarea>
             </div>
         </div>
 
         <!--Rechter Teil für Prüfungsdatum, Timer und Todos-->
-        <div style="flex:1; background-color:red; display:flex; flex-direction:column; gap: 10px; padding:10px">
+        <div style="flex:1; display:flex; flex-direction:column; gap: 10px; padding:10px">
 
             <div id="prüfungs-container" style="flex:1; box-sizing:border-box; flex-direction:column; display:flex; align-items:flex-start; padding:10px;" class="subject">
                 <h2>Prüfungsdatum:</h2>
