--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,8 +9,8 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div class="nav-inner">
-        <ul class="nav-center">
+    <div id="nav-inner">
+        <ul id="nav-center">
             <li><a href="/auth/register">Register</a></li>
             <li><a class="active" href="/auth/login">Login</a></li>
             <li><a href="/about">About</a></li>
