--- a/public/assets/light.css
+++ b/public/assets/light.css
@@ -59,7 +59,7 @@ body {
     z-index: 100;
 }
 
-.nav-center{
+#nav-center{
     display: flex;
     gap: 18px;
     list-style: none;
@@ -67,7 +67,7 @@ body {
     padding: 0;
 }
 
-.nav-center a{
+#nav-center a{
     text-decoration: none;
     font-weight: 600;
     padding: 8px 12px;
@@ -77,7 +77,7 @@ body {
     transition: background .2s, color .2s;
 }
 
-.nav-center a:hover{
+#nav-center a:hover{
     background: rgba(0,0,0,0.12);
 }
 
