Javascript Testcode für create Subject Button. subject div können nun dynamisch erzeugt werden

--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -5,6 +5,7 @@
     <title>subjects</title>
     <link id="theme-style" rel="stylesheet" href="/assets/subjectdark.css">
     <script defer src="/assets/theme.js"></script>
+    <script src="/assets/subjectstest.js" defer></script>
 
 </head>
 <body>
