style.css enthält alle sachen für alle views im darkmode, TODO:about und register anpassen dass inhalt zentriert ist, dann lightmode farben hinzufügen

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login</title>
-    <link id="theme-style" rel="stylesheet" href="/assets/dark.css">
-    <script defer src="/assets/theme.js"></script>
+    <!--<link id="theme-style" rel="stylesheet" href="/assets/dark.css">-->
+    <!--<script defer src="/assets/theme.js"></script>-->
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
-<body>
+<body style="align-items:center">
 
     <nav id="navbar">
         <div id="nav-inner">
