--- a/views/subject.ejs
+++ b/views/subject.ejs
@@ -6,7 +6,8 @@
     <script defer src="/assets/theme.js"></script>
     <script defer src="/assets/pomodoro.js"></script>
     <!--<link id="theme-style" rel="stylesheet" href="/assets/subjectdark.css">-->
-    <link id="theme-style" rel="stylesheet" href="/assets/singleSubjectDark.css">
+    <!--<link id="theme-style" rel="stylesheet" href="/assets/singleSubjectDark.css">-->
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
 <header>
