--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About</title>
-    <link id="theme-style" rel="stylesheet" href="/assets/dark.css">
-    <script defer src="/assets/theme.js"></script>
+    <link rel="stylesheet" href="/assets/dark.css">
+    <!--<link rel="stylesheet" href="/assets/style.css">-->
+    <!--<script defer src="/assets/theme.js"></script>-->
 </head>
-<body>
+<body style="align-items:center">
 
 <nav id="navbar">
     <div id="nav-inner">
