--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Register</title>
-    <link id="theme-style" rel="stylesheet" href="/assets/dark.css">
-    <script defer src="/assets/theme.js"></script>
+    <!--<link id="theme-style" rel="stylesheet" href="/assets/dark.css">-->
+    <!--<script defer src="/assets/theme.js"></script>-->
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
 
