--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>subjects</title>
-    <link id="theme-style" rel="stylesheet" href="/assets/subjectdark.css">
-    <script defer src="/assets/theme.js"></script>
+    <!--<link id="theme-style" rel="stylesheet" href="/assets/subjectdark.css">-->
+    <link rel="stylesheet" href="/assets/style.css">
+    <!--<script defer src="/assets/theme.js"></script>-->
     <script src="/assets/subjectstest.js" defer></script>
+
 
 </head>
 <body>
@@ -19,9 +21,9 @@
         <label class="theme-toggle">
             <input type="checkbox" id="toggle">
             <span class="slider round">
-              <div class="background"></div>
-              <div class="star"></div>
-              <div class="star"></div>
+                <div class="background"></div>
+                <div class="star"></div>
+                <div class="star"></div>
             </span>
         </label>
 
